update openpmd-api cmake

--- a/src/CMake/PluginVsInstall.cmake.in
+++ b/src/CMake/PluginVsInstall.cmake.in
@@ -323,6 +323,10 @@ set(NETCDF_LIBRARY_DIR ${VISIT_LIBRARY_DIR} ${VISIT_ARCHIVE_DIR})
 set(NETCDF_LIB @NETCDF_LIB@)
 set(NETCDF_CXX_LIB @NETCDF_CXX_LIB@)
 
+set(OPENPMD_API_INCLUDE_DIR ${VISIT_ROOT_INCLUDE_DIR}/openpmd_api/include)
+set(OPENPMD_API_LIBRARY_DIR ${VISIT_LIBRARY_DIR} ${VISIT_ARCHIVE_DIR})
+set(OPENPMD_API_LIB @OPENPMD_API_LIB@)
+
 set(PDB_INCLUDE_DIR ${VISIT_ROOT_INCLUDE_DIR}/silo/include)
 set(PDB_LIBRARY_DIR ${VISIT_LIBRARY_DIR} ${VISIT_ARCHIVE_DIR})
 set(PDB_LIB @SILO_LIB@)
